# C--assign7

./: .gitignore  CMakeLists.txt
include/: TypeInterpret.h
src/: TypeApp.cpp  TypeInterpret.cpp
tests/: CMakeLists.txt  TypeInterpret_tests.cpp
